--- a/app/src/main/res/layout/custom_countrycode_item.xml
+++ b/app/src/main/res/layout/custom_countrycode_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    android:weightSum="1">
+   >
 
     <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="match_parent"
@@ -11,19 +11,26 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:gravity="left"
+        android:textSize="25dp"
         android:background="@android:color/transparent"
         android:textColor="@android:color/white"
-        android:padding="5dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
         android:id="@+id/custom_spinner_label"
-        android:layout_weight="0.20" />
+         />
 
-    <ImageView
-        android:layout_width="match_parent"
+    <com.svs.hztb.CustomViews.WalkWayTextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@mipmap/right_arrow"
-        android:background="@android:color/transparent"
-        android:layout_gravity="center_vertical|right"
-        android:layout_weight="0.80" />
+        android:text="+22"
+        android:id="@+id/code_name"
+        android:gravity="center"
+        android:layout_marginRight="25dp"
+        android:textSize="25dp"
+        android:layout_alignBottom="@+id/custom_spinner_label"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true" />
 
-</LinearLayout>
+
+</RelativeLayout>
