--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -1,19 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-  >
+    android:orientation="vertical">
     <com.svs.hztb.CustomViews.WalkWayTextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:id="@+id/textview_actionbarTitle"
+    android:layout_gravity="center"
+    android:layout_centerHorizontal="true"
+    android:textColor="@android:color/white"
+    android:textSize="25dp"
+    android:padding="5dp"
+    android:gravity="center"
+    android:text="@string/actionbar_title" />
+
+    <RelativeLayout
+        android:id="@+id/layout_back_actionbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textview_actionbarTitle"
-        android:layout_gravity="center"
-        android:layout_centerHorizontal="true"
-        android:textColor="@android:color/white"
-        android:textSize="25dp"
-        android:padding="5dp"
-        android:gravity="center"
-        android:text="@string/actionbar_title" />
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
+
+        <com.svs.hztb.CustomViews.WalkWayTextView
+            android:id="@+id/textview_actionbarTitle1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/button_back"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="@string/actionbar_title"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/white"
+            android:textSize="25dp" />
+
+        <com.svs.hztb.CustomViews.WalkWayButton
+            android:id="@+id/button_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            android:text="Back"
+            android:textColor="@color/picton_blue" />
+    </RelativeLayout>
+
 
 </RelativeLayout>
