--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -20,32 +20,20 @@
         android:id="@+id/layout_back_actionbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@mipmap/registration_bg"
         android:visibility="gone"
         >
-
         <com.svs.hztb.CustomViews.WalkWayTextView
-            android:id="@+id/textview_actionbarTitle1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/button_back"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="@string/actionbar_title"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@android:color/white"
-            android:textSize="25dp" />
-
-        <com.svs.hztb.CustomViews.WalkWayButton
+            android:padding="20dp" />
+        <ImageView
             android:id="@+id/button_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/transparent"
-            android:text="Back"
-            android:textColor="@color/picton_blue" />
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="12dp"
+            android:background="@mipmap/navigation_drawer"/>
     </RelativeLayout>
 
 
