Fixed Bugs raised by Srinivas. Button on profile pic. Navigation bar on click functionality

--- a/app/src/main/res/layout/drawer_image_thumb.xml
+++ b/app/src/main/res/layout/drawer_image_thumb.xml
@@ -10,7 +10,9 @@
         android:text="X"
         android:id="@+id/button"
         android:layout_margin="5dp"
+        android:background="@color/picton_blue"
         android:layout_alignParentTop="true"
+        android:textColor="@android:color/white"
         android:layout_alignParentEnd="true" />
 
     <com.svs.hztb.CustomViews.CircularImageView
