--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -13,6 +13,7 @@
     android:textColor="@android:color/white"
     android:textSize="25dp"
     android:padding="5dp"
+        android:visibility="visible"
     android:gravity="center"
     android:text="@string/actionbar_title" />
 
@@ -20,18 +21,24 @@
         android:id="@+id/layout_back_actionbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/registration_bg"
         android:visibility="gone"
+
         >
         <com.svs.hztb.CustomViews.WalkWayTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp" />
+            android:textSize="25dp"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:text="Home Screen"
+            android:textColor="@android:color/white"
+            android:id="@+id/titleView"
+
+             />
         <ImageView
-            android:id="@+id/button_back"
-            android:layout_width="30dp"
+            android:id="@+id/button_nav"
+            android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="12dp"
             android:background="@mipmap/navigation_drawer"/>
     </RelativeLayout>
