--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,9 +21,8 @@
         android:layout_below="@+id/button"
         android:src="@mipmap/thumb"
         android:scaleType="fitCenter"
-        android:clickable="true"
+        android:clickable="false"
         app:civ_border="true"
-        android:onClick="onProfileThumbClicked"
         android:layout_marginTop="20dp"
         app:civ_selector="true"
         app:civ_selectorColor="@android:color/holo_blue_bright"
@@ -153,5 +152,16 @@
             android:background="@color/picton_blue"
             android:layout_alignParentEnd="true" />
     </LinearLayout>
+
+        <com.svs.hztb.CustomViews.WalkWayButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit"
+            android:id="@+id/button2"
+            android:onClick="onProfileThumbClicked"
+            android:background="@color/picton_blue"
+            android:layout_alignBottom="@+id/profile_thumb"
+            android:layout_alignEnd="@+id/profile_thumb"
+            android:layout_marginBottom="30dp" />
     </RelativeLayout>
 </ScrollView>
