--- a/app/src/main/res/layout/custom_product_item.xml
+++ b/app/src/main/res/layout/custom_product_item.xml
@@ -1,99 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:id="@+id/custom_product_item">
+    android:id="@+id/custom_product_item"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/product_thumb"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:id="@+id/product_thumb"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
-        android:layout_alignParentTop="true"
-        android:baselineAlignBottom="true"/>
-
-    <com.svs.hztb.CustomViews.WalkWayTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Jumba Sports Shoes"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
-        android:textSize="16sp"
-        android:paddingRight="10dp"
+        android:baselineAlignBottom="true"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/thumb" />
+
+
+
+    <com.svs.hztb.CustomViews.WalkWayTextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/product_thumb"
-        />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="Jumba Sports Shoes"
+        android:textSize="16sp" />
 
     <com.svs.hztb.CustomViews.WalkWayTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:text="Product ID : 234234"
         android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:layout_toRightOf="@+id/product_thumb"/>
-
-    <com.svs.hztb.CustomViews.WalkWayTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:text="Sed auctor newueu rhonous ut elafienft nibh partition. Ut in nulia enuim"
-        android:id="@+id/product_description"
-        android:layout_below="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textView2"
+        android:layout_toRightOf="@+id/product_thumb"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:layout_above="@+id/separator"
-        android:paddingBottom="5dp"
+        android:text="Product ID : 234234"
+        android:textSize="13sp" />
+
+    <com.svs.hztb.CustomViews.WalkWayTextView
+        android:id="@+id/product_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/product_thumb"/>
+        android:layout_below="@+id/textView3"
+        android:layout_toRightOf="@+id/product_thumb"
+        android:layout_above="@+id/price_layout"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:text="Sed auctor newueu rhonous ut elafienft nibh partition. Ut in nulia enuim"
+        android:textSize="12sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/price_layout"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/product_thumb"
+        android:layout_alignBottom="@+id/product_thumb"
+        android:gravity="bottom"
+        android:orientation="vertical">
     <View
+        android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@+id/product_price"
         android:layout_alignParentRight="true"
-        android:padding="10dp"
-        android:id="@+id/separator"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@android:color/black"
         android:layout_toRightOf="@+id/product_thumb"
-        ></View>
+        android:background="@android:color/black"
+        android:padding="10dp"></View>
 
-    <com.svs.hztb.CustomViews.WalkWayTextView
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
         android:text="Price: $ 98.99"
         android:id="@+id/product_price"
-        android:layout_above="@+id/separator2"
-        android:layout_alignParentRight="true"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:layout_toRightOf="@+id/product_thumb"/>
+        android:layout_toRightOf="@+id/product_thumb"
+        android:layout_above="@+id/separator_bottom"
+        />
 
     <View
+        android:id="@+id/separator_bottom"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentRight="true"
-        android:padding="10dp"
-        android:id="@+id/separator2"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignBaseline="@+id/product_thumb"
-        android:background="@android:color/black"
         android:layout_toRightOf="@+id/product_thumb"
-        ></View>
+        android:background="@android:color/black"
+       ></View>
 
+    </LinearLayout>
 </RelativeLayout>
