--- a/app/src/main/res/layout/fragment_request_opinion.xml
+++ b/app/src/main/res/layout/fragment_request_opinion.xml
@@ -10,4 +10,13 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:background="@drawable/button_background"
+        android:padding="5dp"
+        android:id="@+id/button6"
+        android:layout_gravity="left|top" />
+
 </FrameLayout>
