--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="picton_blue">#3EAAF5</color>
     <color name="light_grey">#d3d3d3</color>
+    <color name="concord">#7D7D7D</color>
+    <color name="mischka">#CECDDE</color>
+    <color name="cerise">#E7478F</color>
 </resources>
