Workflow for ContactListView Completed .

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>Profile</item>
         <item>Settings</item>
         <item>Groups</item>
+        <item>Reguest Opinion</item>
         <item>Logout</item>
     </string-array>
 
