--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -45,7 +45,7 @@
             android:layout_margin="10dp"
             android:background="@color/picton_blue"
             android:text="@string/signup_Done"
-            android:onClick="onDoneButtonClicked"
+            android:id="@+id/doneButton"
             android:textColor="@android:color/white" />
     </RelativeLayout>
 
