--- a/app/src/main/res/layout/fragment_home_launching.xml
+++ b/app/src/main/res/layout/fragment_home_launching.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:text="Request Opinion"
-    android:id="@+id/button3"
+    android:id="@+id/button_getOpinons"
     android:layout_weight="1"
     android:textSize="25dp"
     android:layout_marginBottom="2dp"
