--- a/app/src/main/res/layout/custom_contacts_item_layout.xml
+++ b/app/src/main/res/layout/custom_contacts_item_layout.xml
@@ -15,9 +15,21 @@
         android:id="@+id/textview_select_contacts" />
 
     <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/imageView_selected"
+        android:src="@mipmap/tick"
+        android:layout_alignParentRight="true"
+        android:visibility="gone"
+        android:paddingRight="20dp"
+        android:layout_alignTop="@+id/textview_select_contacts"
+        android:layout_alignBottom="@+id/textview_select_contacts"/>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
+        android:visibility="gone"
         android:src="@mipmap/right_arrow"
         android:layout_alignParentRight="true"
         android:paddingRight="20dp"
