--- a/app/src/main/res/layout/custom_get_opinions_item.xml
+++ b/app/src/main/res/layout/custom_get_opinions_item.xml
@@ -1,40 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@mipmap/registration_bg"
-    android:layout_height="match_parent">
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:background="@android:color/transparent"
+    android:layout_height="wrap_content">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@android:color/white"
+        android:layout_height="wrap_content">
     <include
         android:id="@+id/custom_product_item"
-        layout="@layout/custom_product_item"
+        layout="@layout/custom_product_item_text_black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/custom_image_name_layout"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+
         android:layout_marginTop="10dp" />
 
     <include layout="@layout/custom_rating_item"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"/>
+
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/custom_product_item"
+        android:layout_alignEnd="@+id/button_view_selfie"
+        android:layout_marginTop="5dp"
+        android:id="@+id/include" />
 
 
 
 
     <com.svs.hztb.CustomViews.WalkWayButton
-        android:id="@+id/button_capture_selfie"
+        android:id="@+id/button_view_selfie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/custom_product_item"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+
         android:background="@color/picton_blue"
         android:text="@string/view_selfie"
-        android:textColor="@android:color/white" />
-</LinearLayout>
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp"
+
+        android:layout_below="@+id/include" android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
+</RelativeLayout>
