--- a/app/src/main/res/layout/custom_rating_item.xml
+++ b/app/src/main/res/layout/custom_rating_item.xml
@@ -11,13 +11,14 @@
         android:id="@+id/textview_date_getopinion"
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
+        android:textColor="@android:color/black"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="ButtOk"
         android:id="@+id/button_double_ok"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/button_single_ok" />
@@ -25,7 +26,7 @@
     <Button
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="SingOk"
         android:id="@+id/button_single_ok"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/button_maybe" />
@@ -33,7 +34,7 @@
     <Button
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="May Be"
         android:id="@+id/button_maybe"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/button_down" />
@@ -41,7 +42,7 @@
     <Button
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="ButtDwn"
         android:id="@+id/button_down"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
@@ -51,6 +52,7 @@
         android:layout_height="wrap_content"
         android:text="1"
         android:id="@+id/textView4"
+        android:textColor="@android:color/black"
         android:layout_alignStart="@+id/button_double_ok"
         android:layout_below="@+id/button_double_ok"
         android:layout_toStartOf="@+id/button_single_ok"
@@ -61,6 +63,8 @@
         android:layout_height="wrap_content"
         android:text="1"
         android:id="@+id/textView5"
+        android:textColor="@android:color/black"
+
         android:layout_alignRight="@+id/button_single_ok"
         android:layout_below="@+id/button_single_ok"
         android:layout_toEndOf="@+id/button_double_ok"
@@ -70,7 +74,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="4"
-        android:id="@+id/textView6"
+        android:id="@+id/textView6"        android:textColor="@android:color/black"
+
         android:layout_alignTop="@+id/textView5"
         android:layout_alignLeft="@+id/button_maybe"
         android:layout_toStartOf="@+id/button_down"
@@ -80,7 +85,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5"
-        android:id="@+id/textView7"
+        android:id="@+id/textView7"        android:textColor="@android:color/black"
+
 
         android:layout_alignEnd="@+id/button_down"
         android:layout_alignTop="@+id/textView6"
