--- a/app/src/main/res/layout/fragment_get_opinions.xml
+++ b/app/src/main/res/layout/fragment_get_opinions.xml
@@ -1,13 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@mipmap/registration_bg"
     android:layout_height="match_parent"
     tools:context="com.svs.hztb.Fragments.GetOpinionsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/listview_getOpinions"
+         />
 </FrameLayout>
