--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -16,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@mipmap/search_icom"
-            android:layout_margin="10dp"
             android:background="@android:color/white"
             android:textSize="20sp"
             android:ellipsize="end"
@@ -28,7 +27,20 @@
             android:drawablePadding="10dp"
             android:paddingLeft="10dp"
             android:hint="@string/search_contacts"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toStartOf="@+id/button_refresh" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            android:text="@string/refresh"
+            android:id="@+id/button_refresh" />
     </RelativeLayout>
 
 
