--- a/app/src/main/res/layout/custom_rating_item.xml
+++ b/app/src/main/res/layout/custom_rating_item.xml
@@ -1,95 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-    android:layout_height="match_parent">
+    android:orientation="horizontal">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="18 April 2018"
         android:id="@+id/textview_date_getopinion"
-        android:paddingTop="5dp"
-        android:paddingLeft="5dp"
-        android:textColor="@android:color/black"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="ButtOk"
-        android:id="@+id/button_double_ok"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/button_single_ok" />
-
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="SingOk"
-        android:id="@+id/button_single_ok"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/button_maybe" />
-
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="May Be"
-        android:id="@+id/button_maybe"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/button_down" />
-
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="ButtDwn"
-        android:id="@+id/button_down"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/textView4"
-        android:textColor="@android:color/black"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:text="18 April 2018"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:id="@+id/button_double_ok"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/button_single_ok"
+        android:text="ButtOk" />
+
+    <Button
+        android:id="@+id/button_single_ok"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/button_maybe"
+        android:text="SingOk" />
+
+    <Button
+        android:id="@+id/button_maybe"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/button_down"
+        android:text="May Be" />
+
+    <Button
+        android:id="@+id/button_down"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="ButtDwn" />
+
+    <TextView
+        android:id="@+id/textview_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/button_double_ok"
         android:layout_below="@+id/button_double_ok"
         android:layout_toStartOf="@+id/button_single_ok"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@android:color/black" />
 
     <TextView
+        android:id="@+id/textView_single_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/textView5"
-        android:textColor="@android:color/black"
-
         android:layout_alignRight="@+id/button_single_ok"
         android:layout_below="@+id/button_single_ok"
+
         android:layout_toEndOf="@+id/button_double_ok"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@android:color/black" />
 
     <TextView
+        android:id="@+id/textView_maybe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/textView6"        android:textColor="@android:color/black"
-
-        android:layout_alignTop="@+id/textView5"
         android:layout_alignLeft="@+id/button_maybe"
+        android:layout_alignTop="@+id/textView_single_ok"
+
         android:layout_toStartOf="@+id/button_down"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@android:color/black" />
 
     <TextView
+        android:id="@+id/textView_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/textView7"        android:textColor="@android:color/black"
-
-
         android:layout_alignEnd="@+id/button_down"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_toEndOf="@+id/textView6"
-        android:gravity="center" />
+        android:layout_alignTop="@+id/textView_maybe"
+
+
+        android:layout_toEndOf="@+id/textView_maybe"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@android:color/black" />
 </RelativeLayout>
